# acms80870

./: .buildinfo  .gitignore  404.html  LICENSE-text.html  LICENSE.html  README.md  authors.html  changelog.html  conduct.html  contributing.html  example.html  fine_tuning_llms.ipynb  genindex.html  index.html  objects.inv  pkgdown.yml  py-modindex.html  search.html  search.json  searchindex.js  sitemap.xml
.github/workflows/: R-CMD-check.yaml  ci.yml  pkgdown.yaml
_modules/: index.html
_modules/dsiplibpy/: prediction_pipelines.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/dsiplibpy/: index.html
dsiplib/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml
dsiplib/R/: clean-functions.R
dsiplib/man/: clean_na_cols.Rd
dsiplib/tests/: testthat.R
dsiplibR/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
dsiplibR/R/: ggplot-color-themes.R  ggplot-themes.R
dsiplibR/man/: custom_palette.Rd  scale_color_vmodern.Rd  theme_custom.Rd
dsiplibpy/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
dsiplibpy/.github/workflows/: ci.yml
dsiplibpy/docs/: Makefile  conf.py  make.bat
dsiplibpy/src/dsiplibpy/: __init__.py  prediction_pipelines.py
dsiplibpy/tests/: test_dsiplibpy.py
lab1_redwood/: .gitignore
lab3_parallelization/: environment.yml
linguisticsApp/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md
reference/: custom_palette.html  index.html  scale_color_vmodern.html  theme_custom.html
(+81 files in other folders)
